<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_application_settings">

        <CheckBoxPreference
            android:key="is_autorun_while_app_charging"
            android:title="@string/title_autorun_while_charging"
            android:summary="@string/summary_autorun_while_charging" />

        <CheckBoxPreference
            android:key="is_autorun_after_app_restart"
            android:title="@string/title_autorun_after_restart"
            android:summary="@string/summary_autorun_after_restart" />

        <Preference
            android:key="slide_delay"
            android:title="@string/title_delay"
            android:summary="@string/summary_slide_delay"
            android:dialogTitle="@string/dialog_title_delay" />

         <Preference
            android:title="@string/title_start_date"
            android:summary="@string/summary_start_date"
            android:key="date_start" />

         <Preference
            android:title="@string/title_start_time"
            android:summary="@string/summary_start_time"
            android:key="time_start" />

         <Preference
            android:title="@string/title_end_date"
            android:summary="@string/summary_end_date"
            android:key="date_end" />

         <Preference
            android:title="@string/title_end_time"
            android:summary="@string/summary_end_time"
            android:key="time_end" />

        <Preference
            android:title="@string/title_folder_name"
            android:summary="@string/summary_folder_name"
            android:key="folder_name" />

    </PreferenceCategory>

</PreferenceScreen>