<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.rogachev.slider.app.MainActivity">

    <TextView
        android:text="@string/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_run"
        android:id="@+id/btn_run"
        android:layout_below="@+id/cb_autorun"
        android:layout_alignRight="@+id/cb_autorun_afterrestart"
        android:layout_alignEnd="@+id/cb_autorun_afterrestart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_date"
        android:layout_marginTop="94dp"
        android:layout_below="@+id/tv_title"
        android:layout_toRightOf="@+id/tv_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_time"
        android:layout_alignTop="@+id/btn_start_date"
        android:layout_toRightOf="@+id/btn_choose_folder" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_end_date"
        android:layout_below="@+id/tv_end"
        android:layout_alignLeft="@+id/btn_start_date"
        android:layout_alignStart="@+id/btn_start_date" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_autorun_after_restart"
        android:id="@+id/cb_autorun_afterrestart"
        android:checked="false"
        android:layout_below="@+id/et_delay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_autorun_while_charging"
        android:id="@+id/cb_autorun"
        android:checked="false"
        android:layout_below="@+id/cb_autorun_afterrestart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_end_time"
        android:layout_alignTop="@+id/btn_end_date"
        android:layout_toRightOf="@+id/btn_choose_folder" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_choose_folder"
        android:id="@+id/btn_choose_folder"
        android:layout_below="@+id/tv_title"
        android:layout_toRightOf="@+id/tv_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvFolderName"
        android:layout_below="@+id/btn_choose_folder"
        android:layout_alignLeft="@+id/btn_choose_folder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_start_time"
        android:id="@+id/tv_start"
        android:layout_above="@+id/btn_start_time"
        android:layout_alignRight="@+id/btn_start_date"
        android:layout_alignEnd="@+id/btn_start_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_end_time"
        android:id="@+id/tv_end"
        android:layout_below="@+id/btn_start_date"
        android:layout_alignLeft="@+id/tv_start"
        android:layout_alignStart="@+id/tv_start" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_delay"
        android:layout_below="@+id/btn_end_date"
        android:layout_alignLeft="@+id/btn_end_date"
        android:layout_alignStart="@+id/btn_end_date"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_delay"
        android:id="@+id/tv_delay"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/tv_end"
        android:layout_alignStart="@+id/tv_end" />

</RelativeLayout>
